* Fixed text link color contrast to fullfil WCAG AA standard

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/base/colors.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/base/colors.scss
@@ -277,7 +277,7 @@ $color-label-inverse: $color-default;
 // Text
 $color-text-default: $color-inverse;
 $color-text-secondary: #cecece;
-$color-text-link: $color-primary;
+$color-text-link: #0670b7;
 $color-text-link-selected: $color-default;
 $color-text-secondary: #b3b2b2;
 
@@ -293,7 +293,7 @@ $color-separator-background: $color-inverse;
 // Links
 $color-link-frontpage-text: $color-inverse;
 $color-link-highlight-text: #00af00;
-$color-link-default-text: $color-primary;
+$color-link-default-text: #0670b7;
 $color-link-inverse-text: $color-default;
 $color-link-default-background: rgba(0, 0, 0, 0);
 $color-link-highlight-background: rgba(0, 0, 0, 0);
